Nutch Change Log

Release 1.4 - Current development

* NUTCH-1055 upgrade package.html file in language identifier plugin (lewismc)

* NUTCH-1059 Remove convdb command from /bin/nutch (lewismc)

* NUTCH-1019 Edit comment in org.apache.nutch.crawl.Crawl to reflect removal of legacy (lewismc)

* NUTCH-1023 Trivial error in error message for org.apache.nutch.crawl.LinkDbReader (lewismc)

* NUTCH-1043 Add pattern for filtering .js in default url filters (jnioche)

* NUTCH-1054 LinkDB optional during indexing (jnioche)

* NUTCH-1029 Readdb throws EOFException (markus)

* NUTCH-1036 Solr jobs should increment counters in Reporter (markus)

* NUTCH-987 Support HTTP auth for Solr communication (markus)

* NUTCH-1027 Degrade log level of `can't find rules for scope` (markus)

* NUTCH-783 IndexingFiltersChecker utility (jnioche via markus)

* NUTCH-1030 WebgraphDB program requires manually added directories (markus)

* NUTCH-1011 Normalize duplicate slashes in URL's (markus)

* NUTCH-993 NullPointerException at FetcherOutputFormat.checkOutputSpecs (Christian Guegi via jnioche)

* NUTCH-1013 Migrate RegexURLNormalizer from Apache ORO to java.util.regex (markus)

* NUTCH-1016 Strip UTF-8 non-character codepoints and add logging for SolrWriter (markus)

* NUTCH-1012 Cannot handle illegal charset $charset (markus)

* NUTCH-1022 Upgrade version number of Nutch agent in conf (markus)

* NUTCH-295 Description for fetcher.threads.fetch property (kubes via markus)

* NUTCH-1000 Add option not to commit to Solr (markus)

* NUTCH-1006 MetaEquiv with single quotes not accepted (markus)

* NUTCH-1010 ContentLength not trimmed (markus)

Release 1.3 - 6/4/2011

* NUTCH-995 Generate POM file using the Ivy makepom task (mattmann, jnioche, Gabriele Kahlout)

* NUTCH-1003 task 'package' does not reflect the new organisation of the code (jnioche)

* NUTCH-994 Fine tune Solr schema (markus)

* NUTCH-997 IndexingFitlers to store Date objects instead of Strings (jnioche)
